feat: modernize project for open-source release and deployability